<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Results" android:background="?attr/colorAccent">

    <TextView
            android:text="@string/textResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textResult" android:layout_marginTop="88dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="36sp" android:fontFamily="@font/stardew_valley"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textResult2" android:textSize="36sp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textResult"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:fontFamily="@font/stardew_valley"/>
    <Button
            android:text="@string/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBack" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textResult2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:fontFamily="@font/stardew_valley"
            android:textSize="24sp" android:backgroundTint="#C3943E2B"/>
    <Button
            android:text="@string/btnMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMain2" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:fontFamily="@font/stardew_valley" android:textSize="24sp" android:backgroundTint="#C3943E2B"/>
    <ImageView
            android:layout_width="248dp"
            android:layout_height="250dp" app:srcCompat="@drawable/pixel_cloud"
            android:id="@+id/imageView3" android:layout_marginTop="420dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp" android:contentDescription="TODO"/>
</androidx.constraintlayout.widget.ConstraintLayout>