<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="?attr/colorAccent">
    <TextView
            android:text="@string/textToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textDate" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="36sp" android:fontFamily="@font/stardew_valley"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textShowDate" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textDate" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="36sp" android:gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/stardew_valley"/>
    <Spinner
            android:layout_width="286dp"
            android:layout_height="47dp"
            android:id="@+id/spinnerDate" android:entries="@array/spinnerDates"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textShowDate"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:fontFamily="@font/stardew_valley"
            app:layout_constraintHorizontal_bias="0.495"
            android:textSize="24sp"
            android:backgroundTintMode="add" android:alpha="1"
    />
    <Button
            android:text="@string/btnConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnConvert2" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerDate" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:fontFamily="@font/stardew_valley"
            android:textSize="24sp" android:backgroundTint="#C3943E2B"/>
    <Button
            android:text="@string/btnCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCustom" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/btnConvert2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:fontFamily="@font/stardew_valley"
            android:textSize="24sp" android:backgroundTint="#C3943E2B"/>
    <ImageView
            android:layout_width="255dp"
            android:layout_height="205dp" app:srcCompat="@drawable/pixel_cloud"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="76dp"
            android:layout_marginTop="480dp" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>